#3883 adding configure settings snippet

--- a/docs/_source/getting_started/quickstart_workflow.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow.ipynb
@@ -1598,12 +1598,32 @@
     },
     {
       "cell_type": "markdown",
+      "id": "27826187",
+      "metadata": {},
+      "source": [
+        "You can configure labels programmatically by using `configure_dataset_settings` method:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3c6049fb",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "labels = [\"PER\", \"ORG\", \"LOC\", \"MISC\"]\n",
+        "settings = rg.TokenClassificationSettings(label_schema=labels)\n",
+        "rg.configure_dataset_settings(name=\"coffee-reviews\", settings=settings)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "bd1c2d53-37c6-438a-b447-6dcae3369f55",
       "metadata": {
         "id": "bd1c2d53-37c6-438a-b447-6dcae3369f55"
       },
       "source": [
-        "You can create labels in _Dataset\\Settings_ and start annotating:\n",
+        "You can also create labels in _Dataset\\Settings_ and start annotating:\n",
         "\n",
         "![Screenshot of the uploaded coffee reviews](https://github.com/argilla-io/argilla/blob/main/docs/_source/_static/reference/webapp/features-annotate.png?raw=1)"
       ]
