docs: quickstart section review (#3864)
<!-- Thanks for your contribution! As part of our Community Growers
initiative 🌱, we're donating Justdiggit bunds in your name to reforest
sub-Saharan Africa. To claim your Community Growers certificate, please
contact David Berenstein in our Slack community or fill in this form
https://tally.so/r/n9XrxK once your PR has been merged. -->

# Description

We will review the documentation regarding the three files of the
Quickstart section focusing on typos, grammar and links. The code was
also checked and it's working except for the variable name.

Closes #3863 

**Type of change**

(Remember to title the PR according to the type of change)

- [X] Documentation update

**How Has This Been Tested**

(Please describe the tests that you ran to verify your changes.)

- [X] `sphinx-autobuild` (read [Developer
Documentation](https://docs.argilla.io/en/latest/community/developer_docs.html#building-the-documentation)
for more details)

**Checklist**

- [ ] I added relevant documentation
- [X] I followed the style guidelines of this project
- [X] I did a self-review of my code
- [X] I made corresponding changes to the documentation
- [X] My changes generate no new warnings
- [ ] I filled out [the contributor form](https://tally.so/r/n9XrxK)
(see text above)
- [ ] I have added relevant notes to the `CHANGELOG.md` file (See
https://keepachangelog.com/)

--- a/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
@@ -9,7 +9,7 @@
         "\n",
         "Note\n",
         "    \n",
-        "This tutorial demonstrates a sample usage for `FeedbackDataset`, which offers implementations different from the old `TextClassificationDataset`, `Text2TextDataset` and `TokenClassificationDataset`. To have info about old datasets, you can have a look at [here](/getting_started/quickstart_workflow.html).\n",
+        "This tutorial demonstrates a sample usage for `FeedbackDataset`, which offers implementations different from the old `TextClassificationDataset`, `Text2TextDataset` and `TokenClassificationDataset`. To have info about old datasets, you can have a look at them [here](../getting_started/quickstart_workflow.html).\n",
         "    \n",
         "</div>"
       ]
@@ -33,7 +33,7 @@
       "source": [
         "## Install Libraries\n",
         "\n",
-        "Install Argilla latest version in Colab, along with other libraries and models used in this notebook."
+        "Install the latest version of Argilla in Colab, along with other libraries and models used in this notebook."
       ]
     },
     {
@@ -63,7 +63,7 @@
         "docker run -d --name quickstart -p 6900:6900 argilla/argilla-quickstart:latest\n",
         "```\n",
         "\n",
-        "More info on Installation [here](/getting_started/installation/deployments/deployments.html)."
+        "More info on Installation [here](../getting_started/installation/deployments/deployments.html)."
       ]
     },
     {
@@ -121,11 +121,11 @@
       "source": [
         "`\"owner.apikey\"` is the default value for `ARGILLA_API_KEY` variable.\n",
         "\n",
-        "`admin` is the name of default workspace. A **workspace** is a “space” inside your Argilla instance where authorized users can collaborate.\n",
+        "`admin` is the name of the default workspace. A **workspace** is a “space” inside your Argilla instance where authorized users can collaborate.\n",
         "\n",
-        "If you want to initialize a connection manually you can use `rg.init()`. For more info about custom configurations like headers and workspace separation, check our [config page](../getting_started/installation/configurations/configurations.md).\n",
+        "If you want to initialize a connection manually you can use `rg.init()`. For more info about custom configurations like headers and workspace separation, check our [config page](../getting_started/installation/configurations/configurations.html).\n",
         "\n",
-        "If you want to customize the access credentials, take a look at our [user management section](../getting_started/installation/configurations/user_management.md)."
+        "If you want to customize the access credentials, take a look at our [user management section](../getting_started/installation/configurations/user_management.html)."
       ]
     },
     {
@@ -199,7 +199,7 @@
       "id": "0ac69d4d",
       "metadata": {},
       "source": [
-        "While `name` is the indentifier of the question internally, `title` will be the question/instruction seen on Argilla UI. We also define a dictionary for labels."
+        "While `name` is the identifier of the question internally, `title` will be the question/instruction seen on Argilla UI. We also define a dictionary for labels."
       ]
     },
     {
@@ -209,7 +209,7 @@
       "source": [
         "### Annotation guideline\n",
         "\n",
-        "As it is helpful for annotators, we can enrich our task with `guidelines` as well. Clear guidelines will help them to understand the task better and make more accurate annotations. There are two ways to have guidelines: defining it as an argument to the FeedbackDataset or as an argument (`description`) to the question instances above. Depending on the specific task you employ, you may want to use either one of them so, it is a good practice to give a try to the both.\n",
+        "As it is helpful for annotators, we can enrich our task with `guidelines` as well. Clear guidelines will help them to understand the task better and make more accurate annotations. There are two ways to have guidelines: defining it as an argument to the FeedbackDataset or as an argument (`description`) to the question instances above. Depending on the specific task you employ, you may want to use either one of them, so it is good practice to try both.\n",
         "\n",
         "We can now create our FeedbackDataset instance with the fields, question type as shown above. Do not forget to define `fields` and `questions` as a list, while `guidelines` expects a string."
       ]
@@ -243,9 +243,9 @@
       "source": [
         "### Records\n",
         "\n",
-        "A record refers to each of the data items that will be annotated by the annotator team. The records will be the pieces of information that will be shown to the user in the UI in order to complete the annotation task. In the current single label datasest sample, it can only consist of a text to be labeled while it will be a prompt and output pair in the case of instruction datasets.\n",
+        "A record refers to each of the data items that will be annotated by the annotator team. The records will be the pieces of information that will be shown to the user in the UI in order to complete the annotation task. In the current single-label dataset sample, it can only consist of a text to be labeled while it will be a prompt and output pair in the case of instruction datasets.\n",
         "\n",
-        "For Argilla Feedback, we can define a `FeedbackRecord` with the mandatory argument `fields`. Records also offer [other optional arguments](/reference/python/python_client.html#argilla.client.feedback.schemas.records.FeedbackRecord) to further augment each record."
+        "For Argilla Feedback, we can define a `FeedbackRecord` with the mandatory argument `fields`. Records also offer [other optional arguments](../reference/python/python_client.html#argilla.client.feedback.schemas.records.FeedbackRecord) to further augment each record."
       ]
     },
     {
@@ -271,7 +271,7 @@
       "source": [
         "### Responses\n",
         "\n",
-        "Argilla Feedback can deal with multiple ressponses per record for each one of the annotators. We can define a responses list for each record. Each response will be a dictionary with the annotator name as the key and the response as the value."
+        "Argilla Feedback can deal with multiple responses per record for each one of the annotators. We can define a list of responses for each record. Each response will be a dictionary with the annotator's name as the key and the response as the value."
       ]
     },
     {
@@ -312,7 +312,7 @@
         "record.update(\n",
         "    suggestions=[\n",
         "        {\n",
-        "        \"question_name\": \"label_question\",\n",
+        "        \"question_name\": \"relevant\",\n",
         "        \"value\": \"yes\"\n",
         "        }\n",
         "    ]\n",
@@ -370,9 +370,9 @@
       "source": [
         "## Train a model\n",
         "\n",
-        "As with other datasets, Feedback datasets also allow to create a training pipeline and make inference with the resulting model. After you gather responses with Argilla Feedback, you can easily fine-tune an LLM. In this example, we will have complete a text classification task.\n",
+        "As with other datasets, Feedback datasets also allow to create a training pipeline and make inferences with the resulting model. After you gather responses with Argilla Feedback, you can easily fine-tune an LLM. In this example, we will have to complete a text classification task.\n",
         "\n",
-        "For fine-tuning, we will use setfit library and the [Argilla Trainer](/practical_guides/fine_tune.html#the-trainingtask), which is a powerful wrapper around many of our favorite NLP libraries. It provides a very intuitive abstract representation to facilitate simple training workflows using decent default pre-set configurations without having to worry about any data transformations from Argilla.\n",
+        "For fine-tuning, we will use setfit library and the [Argilla Trainer](../practical_guides/fine_tune.html#the-trainingtask), which is a powerful wrapper around many of our favorite NLP libraries. It provides a very intuitive abstract representation to facilitate simple training workflows using decent default pre-set configurations without having to worry about any data transformations from Argilla.\n",
         "\n",
         "Let us first create our dataset to train. For this example, we will use [emotion](https://huggingface.co/datasets/argilla/emotion) dataset from Argilla, which was created using Argilla. Each text item has its responses as 6 different sentiments, which are Sadness, Joy, Love, Anger, Fear and Surprise."
       ]
@@ -393,7 +393,7 @@
       "id": "861c3648",
       "metadata": {},
       "source": [
-        "We can then start to create training pipeline by first defining `TrainingTask`, which is used to define how the data should be processed and formatted according to the associated task and framework. Each task has its own classmethod and the data formatting can always be customized via `formatting_func`. You can visit [this page](/practical_guides/fine_tune.html#the-trainingtask) for more info. Simpler tasks like text classification can be defined using default definitions, as we do in this example."
+        "We can then start to create a training pipeline by first defining `TrainingTask`, which is used to define how the data should be processed and formatted according to the associated task and framework. Each task has its own classmethod and the data formatting can always be customized via `formatting_func`. You can visit [this page](../practical_guides/fine_tune.html#the-trainingtask) for more info. Simpler tasks like text classification can be defined using default definitions, as we do in this example."
       ]
     },
     {
@@ -493,7 +493,7 @@
       "id": "85ad4ad2",
       "metadata": {},
       "source": [
-        "We have trained a model with FeedbackDataset in this tutorial. For more info about concepts in Argilla Feedback and LLMs, look at [here](/conceptual_guides/llm/llm.html). To see more hands-on tutorials about FeedbackDataset, please look at [here](/practical_guides/practical_guides.html)."
+        "We have trained a model with FeedbackDataset in this tutorial. For more info about concepts in Argilla Feedback and LLMs, look [here](../conceptual_guides/llm/llm.html). To see more hands-on tutorials about FeedbackDataset, please look [here](../practical_guides/practical_guides.html)."
       ]
     },
     {
