docs: other datasets section review in tutorials (#3890)
<!-- Thanks for your contribution! As part of our Community Growers
initiative 🌱, we're donating Justdiggit bunds in your name to reforest
sub-Saharan Africa. To claim your Community Growers certificate, please
contact David Berenstein in our Slack community or fill in this form
https://tally.so/r/n9XrxK once your PR has been merged. -->

# Description

Correcting the grammar, typos, links and some coding of the tutorials
(other datasets).

Closes #3876 

**Type of change**

(Remember to title the PR according to the type of change)

- [X] Documentation update

**How Has This Been Tested**

(Please describe the tests that you ran to verify your changes.)

- [X] `sphinx-autobuild` (read [Developer
Documentation](https://docs.argilla.io/en/latest/community/developer_docs.html#building-the-documentation)
for more details)

**Checklist**

- [ ] I added relevant documentation
- [X] I followed the style guidelines of this project
- [X] I did a self-review of my code
- [X] I made corresponding changes to the documentation
- [X] My changes generate no new warnings
- [ ] I filled out [the contributor form](https://tally.so/r/n9XrxK)
(see text above)
- [ ] I have added relevant notes to the `CHANGELOG.md` file (See
https://keepachangelog.com/)

--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/labelling-tokenclassification-using-spacy-llm.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/labelling-tokenclassification-using-spacy-llm.ipynb
@@ -9,8 +9,8 @@
     "This tutorial will guide you through a Named Entity Recognition (NER) pipeline using spacy-llm and few-shot learning. The steps will be as follows:\n",
     "\n",
     "- Run Argilla and load `spacy-llm` along with other libraries\n",
-    "- Define fewshot examples for the model\n",
-    "- Define config for your pipeline and initiliaze it\n",
+    "- Define few-shot examples for the model\n",
+    "- Define config for your pipeline and initialize it\n",
     "- Create `TokenClassificationRecord` and store the inferences in it\n",
     "- Push to Argilla"
    ]
@@ -21,9 +21,9 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "NER is a Natural Language Processing task where tokens are categorized into pre-defined categories such as person, organization or place as `named entities`. Thus, NER is one of the primary steps to turn the unstructured data into structured data. With Argilla, you will have the opportunity to validate and annotate the named entities that you obtain from your NER pipeline.\n",
+    "NER is a Natural Language Processing task where tokens are categorized into pre-defined categories such as person, organization or place as `named entities`. Thus, NER is one of the primary steps to turn unstructured data into structured data. With Argilla, you will have the opportunity to validate and annotate the named entities that you obtain from your NER pipeline.\n",
     "\n",
-    "[spacy-llm](https://spacy.io/usage/large-language-models) is a package that integrates the strength of LLMs into regular spaCy pipelines, thus allowing to quick and practical prompting for various tasks. Besides, since it requires no training data, the models are ready to use in your pipeline. If you want to train your own model or create your custom task, `spacy-llm` also helps to implement any custom pipeline.\n",
+    "[spacy-llm](https://spacy.io/usage/large-language-models) is a package that integrates the strength of LLMs into regular spaCy pipelines, thus allowing quick and practical prompting for various tasks. Besides, since it requires no training data, the models are ready to use in your pipeline. If you want to train your own model or create your custom task, `spacy-llm` also helps to implement any custom pipeline.\n",
     "\n",
     "In this tutorial, we will create a `spacy-llm` pipeline to perform NER on `banking77` dataset. It is a dataset consisting of online banking queries by customers and their annotations with the corresponding intents. We will show our model a few positive and negative examples to improve its performance, where we will actually have defined a category for a specific named entity."
    ]
@@ -44,7 +44,7 @@
     "For details about configuring your deployment, check the [official Hugging Face Hub guide](https://huggingface.co/docs/hub/spaces-sdks-docker-argilla).\n",
     "\n",
     "\n",
-    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](../../getting_started/quickstart.ipynb). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
+    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](/getting_started/quickstart_installation.html). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
     "\n",
     "For more information on deployment options, please check the Deployment section of the documentation.\n",
     "\n",
@@ -55,7 +55,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -113,9 +113,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
-    "    api_url=\"http://localhost:6900\",\n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_url=\"http://localhost:6900\", \n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -177,11 +179,11 @@
     "\n",
     "There are two ways to implement a `spacy-llm` pipeline for your LLM task: running the pipeline in the source code or using a `config.cfg` file to define all settings and hyperparameters of your pipeline. In this tutorial, we'll work with a config file and you can have more info about running directly in Python [here](https://spacy.io/usage/large-language-models#example-3).\n",
     "\n",
-    "Before defining pipeline, let us first create the examples that will be used for fewshot learning by our model.\n",
+    "Before defining the pipeline, let us first create the examples that will be used for few-shot learning by our model.\n",
     "\n",
     "### Few-shot examples\n",
     "\n",
-    "In `spacy-llm`, you have the opportunity to inject your examples into prompt to the LLM. As it will enhance the performance for your specific task, `spacy-llm` makes it very easy to have fewshot examples in your pipeline. You can have detailed info [here](https://spacy.io/api/large-language-models#ner).\n",
+    "In `spacy-llm`, you have the opportunity to inject your examples into the prompt to the LLM. As it will enhance the performance for your specific task, `spacy-llm` makes it very easy to have few-shot examples in your pipeline. You can have detailed info [here](https://spacy.io/api/large-language-models#ner).\n",
     "\n",
     "Let us define some very basic example sentences in `json` format."
    ]
@@ -310,9 +312,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the labels should include any custom named entity we have defined in fewshot examples. Otherwise, the model will come up with its own definition of the custom named entity and run accordingly, which might be a problem for specific named entities.\n",
+    "Note that the labels should include any custom-named entity we have defined in few-shot examples. Otherwise, the model will come up with its own definition of the custom-named entity and run accordingly, which might be a problem for specific named entities.\n",
     "\n",
-    "`spacy-llm` offers various models to implement in your pipeline. You can have a look at the available [OpenAI models](https://spacy.io/api/large-language-models#models-rest) as well as checking the [HuggingFace models](https://spacy.io/api/large-language-models#models-hf) offered if you want to work with open-source models.\n",
+    "`spacy-llm` offers various models to implement in your pipeline. You can have a look at the available [OpenAI models](https://spacy.io/api/large-language-models#models-rest) as well as check the [HuggingFace models](https://spacy.io/api/large-language-models#models-hf) offered if you want to work with open-source models.\n",
     "\n",
     "\n",
     "Now, with `ConfigParser`, we can create the config file."
@@ -448,11 +450,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our dataset is now ready to be annotated with predictions from GPT3.5! You can validate or discard the predictions done by the model.\n",
+    "Our dataset is now ready to be annotated with predictions from GPT3.5! You can validate or discard the predictions made by the model.\n",
     "\n",
     "<img src=\"/_static/tutorials/labelling-tokenclassification-using-spacy-llm/argilla-ner-annotation.png\" alt=\"NER Annotation\" style=\"width: 1100px;\">\n",
     "\n",
-    "In this tutorial, we have implemented a `spacy-llm` pipeline for NER task by using model predictions from GPT3.5. In addition, we employed a fewshot learning approach to improve the performance of our model, which is facilitated by `spacy-llm`. You can see more tutorials on the use of `spaCy` with Argilla [here](https://docs.argilla.io/en/latest/tutorials/libraries/spacy.html)"
+    "In this tutorial, we have implemented a `spacy-llm` pipeline for the NER task by using model predictions from GPT3.5. In addition, we employed a few-shot learning approach to improve the performance of our model, which is facilitated by `spacy-llm`. You can see more tutorials on the use of `spaCy` with Argilla [here](https://docs.argilla.io/en/latest/tutorials/libraries/spacy.html)"
    ]
   }
  ],
