--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/weak_supervision_ner.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/weak_supervision_ner.ipynb
@@ -21,7 +21,7 @@
     "This tutorial will walk you through the process of using Argilla to improve weak supervision and data programming workflows with the [skweak library](https://github.com/NorskRegnesentral/skweak).\n",
     "\n",
     "- Using Argilla, _skweak_ and _spaCy_, we define heuristic rules for the [CoNLL 2003](https://arxiv.org/abs/cs/0306050v1) dataset.\n",
-    "- We then log the labelled documents to Argilla and visualize the results via its web app.\n",
+    "- We then log the labeled documents to Argilla and visualize the results via its web app.\n",
     "- After aggregating the noisy labels, we fine-tune and evaluate a spaCy NER model.\n",
     "\n",
     "![labelling-tokenclassification-skweak-weaksupervision](/_static/tutorials/labelling-tokenclassification-skweak-weaksupervision/labelling-tokenclassification-skweak-weaksupervision.png)"
@@ -39,7 +39,7 @@
     "\n",
     "Our goal is to show you how you can incorporate Argilla into data programming workflows to programmatically build training data with a human-in-the-loop approach. We will use the [skweak](https://github.com/NorskRegnesentral/skweak) library.\n",
     "\n",
-    "Weak supervision is a branch of machine learning based on getting lower quality labels more efficiently. We can achieve this by using [skweak](https://github.com/NorskRegnesentral/skweak), a library for programmatically building and managing training datasets without manual labeling.\n",
+    "Weak supervision is a branch of machine learning based on getting lower-quality labels more efficiently. We can achieve this by using [skweak](https://github.com/NorskRegnesentral/skweak), a library for programmatically building and managing training datasets without manual labeling.\n",
     "\n",
     "\n",
     "In this tutorial, we will show you how to extend weak supervision workflows in `skweak` with Argilla.\n",
@@ -65,7 +65,7 @@
     "For details about configuring your deployment, check the [official Hugging Face Hub guide](https://huggingface.co/docs/hub/spaces-sdks-docker-argilla).\n",
     "\n",
     "\n",
-    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](../../getting_started/quickstart.ipynb). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
+    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](/getting_started/quickstart_installation.html). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
     "\n",
     "For more information on deployment options, please check the Deployment section of the documentation.\n",
     "\n",
@@ -76,7 +76,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -90,7 +90,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "For this tutorial, you'll need to install the Argilla client and a few third party libraries using `pip`:"
+    "For this tutorial, you'll need to install the Argilla client and a few third-party libraries using `pip`:"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "%pip install argilla datasets spacy -qqq\n",
-    "%pip install --user git+https://github.com/NorskRegnesentral/skweak -qqq\n",
+    "%pip install skweak\n",
     "!python -m spacy download en_core_web_md"
    ]
   },
@@ -144,9 +144,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -352,7 +354,7 @@
     "    for row in tqdm(dataset):\n",
     "        text = \" \".join(row[\"tokens\"])\n",
     "\n",
-    "        # seems like we have \"empty\" rows\n",
+    "        # Seems like we have \"empty\" rows\n",
     "        if not text.strip():\n",
     "            continue\n",
     "\n",
@@ -405,9 +407,9 @@
     "\n",
     "We define our first heuristic rules to match records related to sports teams.   \n",
     "\n",
-    "After inspecting the dataset on Argilla, we are able to notice that several records start with the name of a sports team followed by its game scores.\n",
+    "After inspecting the dataset on Argilla, we can notice that several records start with the name of a sports team followed by its game scores.\n",
     "\n",
-    "We also notice that other group of records feature the names of two sports teams and their scores after a match against each other.   \n",
+    "We also notice that other groups of records feature the names of two sports teams and their scores after a match against each other.   \n",
     "\n",
     "We write two rules to capture these sports team names as `ORG` entities."
    ]
@@ -427,7 +429,7 @@
     "        Loznica 4 2 0 2 7 4 6\n",
     "        Berwick 3 0 0 3 1 14 0\n",
     "    \"\"\"\n",
-    "    # Label first word as ORG if it is followed only by numbers and punctuation.\n",
+    "    # Label the first word as ORG if it is followed only by numbers and punctuation.\n",
     "    if len(doc) < 2:\n",
     "        return\n",
     "    has_digits = False\n",
@@ -493,7 +495,7 @@
    "source": [
     "Although it is possible to call each one of these annotators independently, if we are going to call several annotators at the same time, it is more convenient to group them under a single combined annotator.   \n",
     "\n",
-    "We add each one of them to our combined annotator through a `add_annotator` method."
+    "We add each one of them to our combined annotator through an `add_annotator` method."
    ]
   },
   {
@@ -534,7 +536,7 @@
     "    Labels the sequence, including the keyword, with the ORG label.\n",
     "    Examples:\n",
     "\n",
-    "        The following examples start with the keyword \"U.S.\"\":\n",
+    "        The following examples start with the keyword \"U.S.\":\n",
     "        - U.S. Treasury Department\n",
     "        - U.S. Treasuries\n",
     "        - U.S. Agriculture Department\n",
@@ -575,7 +577,7 @@
    "id": "d8f0466d",
    "metadata": {},
    "source": [
-    "We take a small list of keywords that appear at the start of capitalized `ORG` entities, and initialize an annotator for each one of these keywords. All annotators are added to our combined annotator, `rule_based_annotator`."
+    "We take a small list of keywords that appear at the start of capitalized `ORG` entities and initialize an annotator for each one of these keywords. All annotators are added to our combined annotator, `rule_based_annotator`."
    ]
   },
   {
@@ -639,7 +641,7 @@
    "id": "71dd6f0c",
    "metadata": {},
    "source": [
-    "If you have large lists of keywords that must be labelled as entities on every occurrence ( e.g. a list of the names of all Fortune 500 companies ), you may be interested in utilizing a [GazetteerAnnotator](https://github.com/NorskRegnesentral/skweak/wiki/Step-1:-Labelling-functions#gazetteersgazetteerannotator). The [Step by step NER tutorial](https://github.com/NorskRegnesentral/skweak/blob/de888c26d7faaa7fe15746f2aed5e574685bbfad/examples/ner/Step%20by%20step%20NER.ipynb) on skweak's documentation shows how you can utilize gazetteers to annotate your data."
+    "If you have large lists of keywords that must be labeled as entities on every occurrence ( e.g. a list of the names of all Fortune 500 companies ), you may be interested in utilizing a [GazetteerAnnotator](https://github.com/NorskRegnesentral/skweak/wiki/Step-1:-Labelling-functions#gazetteersgazetteerannotator). The [Step by step NER tutorial](https://github.com/NorskRegnesentral/skweak/blob/de888c26d7faaa7fe15746f2aed5e574685bbfad/examples/ner/Step%20by%20step%20NER.ipynb) on skweak's documentation shows how you can utilize gazetteers to annotate your data."
    ]
   },
   {
@@ -704,7 +706,7 @@
    "source": [
     "As long as we return the start, end and label for a span, we are allowed to capture entities in a Doc object in any way we like. \n",
     "\n",
-    "Beyond regex, another way to detect such entities would be to utilize a [Matcher object](https://spacy.io/api/matcher), as defined on spaCy's documentation."
+    "Beyond regex, another way to detect such entities would be to utilize a [Matcher object](https://spacy.io/api/matcher), as defined in spaCy's documentation."
    ]
   },
   {
@@ -717,7 +719,7 @@
     "\n",
     "After defining our labeling functions, it's time to effectively annotate our documents.    \n",
     "\n",
-    "First we annotate the development set with gold labels, and add the weak labels of our labeling functions."
+    "First, we annotate the development set with gold labels and add the weak labels of our labeling functions."
    ]
   },
   {
@@ -750,7 +752,7 @@
    "metadata": {},
    "source": [
     "Then we will log records to Argilla, for which any of the labeling functions triggered a weak label, or for which we have a gold annotation. \n",
-    "In this way we will be able to quickly visualize any bugs or missing edge cases which may not yet be covered by our labeling functions. \n",
+    "In this way, we will be able to quickly visualize any bugs or missing edge cases which may not yet be covered by our labeling functions. \n",
     "\n",
     "We also add a metadata `doc_index` that will allow us to group distinct labeling functions for the same document."
    ]
@@ -779,7 +781,7 @@
     "            else:\n",
     "                predictions[labelling_function] = unroll_spans(span_list)\n",
     "\n",
-    "        # add records for each labeling function, if they made a prediction\n",
+    "        # Add records for each labeling function, if they made a prediction\n",
     "        for agent, prediction in predictions.items():\n",
     "            if prediction:\n",
     "                yield rg.TokenClassificationRecord(\n",
@@ -791,7 +793,7 @@
     "                    metadata={\"doc_index\": idx},\n",
     "                )\n",
     "\n",
-    "        # add records with annotations, for which no labeling function triggered\n",
+    "        # Add records with annotations, for which no labeling function triggered\n",
     "        if not any(predictions.values()) and annotations:\n",
     "            yield rg.TokenClassificationRecord(\n",
     "                text=\" \".join(tokens),\n",
@@ -813,7 +815,7 @@
     "\n",
     "After getting a bird's-eye view of our annotations with Argilla, we can use skweak's `LFAnalysis` to numerically evaluate the precision of our rules. \n",
     "\n",
-    "We want to eliminate rules from our combinated annotator that have very low precision scores, as this may negatively affect the performance of a model trained on our annotated data."
+    "We want to eliminate rules from our combined annotator that have very low precision scores, as this may negatively affect the performance of a model trained on our annotated data."
    ]
   },
   {
@@ -1074,7 +1076,7 @@
     "\n",
     "`skweak` includes an aggregation model called **majority voter**. It considers each labeling function as a voter and outputs the most frequent label. We will utilize this majority voter to produce a single set of annotations for our documents, and then we will log the results to Argilla.\n",
     "\n",
-    "The majority voter is particularly useful when annotating for multiple labels, as in this case the annotations produced by the heuristic rules may not only overlap and but also conflict with each other. However, as we are annotating only for the `ORG` label, we won't need the majority voter to resolve any conflicts: it will simply merge the labels from each annotator into the `maj_voter` field."
+    "The majority voter is particularly useful when annotating for multiple labels, as in this case the annotations produced by the heuristic rules may not only overlap but also conflict with each other. However, as we are annotating only for the `ORG` label, we won't need the majority voter to resolve any conflicts: it will simply merge the labels from each annotator into the `maj_voter` field."
    ]
   },
   {
@@ -1132,7 +1134,7 @@
     "\n",
     "Our final annotations should be set to the field `ents` of our spaCy `Doc` objects.   \n",
     "\n",
-    "We set the labels defined by our majority voter for the training set, and the gold labels for the development set."
+    "We set the labels defined by our majority voter for the training set and the gold labels for the development set."
    ]
   },
   {
@@ -1201,7 +1203,7 @@
    "source": [
     "## 5. Evaluate the baseline \n",
     "\n",
-    "Before we train and evaluate our own solution, let's test a simple model to see what is possible to achieve without weak supervision. In this way we can see if our solution is able to improve on this baseline.\n",
+    "Before we train and evaluate our own solution, let's test a simple model to see what is possible to achieve without weak supervision. In this way, we can see if our solution is able to improve on this baseline.\n",
     "\n",
     "We evaluate the [en_core_web_md spaCy model](https://github.com/explosion/spacy-models/releases/tag/en_core_web_md-3.2.0) on CoNLL 2003. The model has been trained on a distinct dataset, OntoNotes 5.0. We do not perform any sort of adaptation on the model and evaluate its zero-shot performance on the development set.  \n"
    ]
@@ -1344,7 +1346,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "Writing precise heuristic rules is a key component to weak supervision workflows with skweak. Argilla makes it easier for us to identify patterns in our data, create new rules and then debug our labelling functions. In this way we are able to accelerate our data annotation pipelines and quickly train new models that score above common zero-shot baselines."
+    "Writing precise heuristic rules is a key component to weak supervision workflows with skweak. Argilla makes it easier for us to identify patterns in our data, create new rules and then debug our labelling functions. In this way, we can accelerate our data annotation pipelines and quickly train new models that score above common zero-shot baselines."
    ]
   }
  ],
