--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/few_shot_learning_with_setfit.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/few_shot_learning_with_setfit.ipynb
@@ -11,9 +11,9 @@
     "\n",
     "To showcase how powerful is **the combination of SetFit and Argilla**:\n",
     "\n",
-    "* We manually **label 55 examples** from the unlabelled split of the imdb dataset, \n",
+    "* We manually **label 55 examples** from the unlabelled split of the IMDb dataset, \n",
     "* we train a model in **5 min**, \n",
-    "* and without using a single example from the original imdb training set, we achieve **0.9 accuracy on the full test set!**\n",
+    "* and without using a single example from the original IMDb training set, we achieve a **0.9 accuracy on the full test set!**\n",
     "\n",
     "\n",
     "## Summary\n",
@@ -50,7 +50,7 @@
     "For details about configuring your deployment, check the [official Hugging Face Hub guide](https://huggingface.co/docs/hub/spaces-sdks-docker-argilla).\n",
     "\n",
     "\n",
-    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](../../getting_started/quickstart.ipynb). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
+    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](/getting_started/quickstart_installation.html). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
     "\n",
     "For more information on deployment options, please check the Deployment section of the documentation.\n",
     "\n",
@@ -61,7 +61,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -114,9 +114,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -184,7 +186,7 @@
    "id": "ccff9d86-55d4-42ca-ae32-1428113a5684",
    "metadata": {},
    "source": [
-    "Before training, you can easily share the dataset using the `push_to_hub` method. This might be useful if you don't have a GPU on your machine and want to use a training service or Colab for example."
+    "Before training, you can easily share the dataset using the `push_to_hub` method. This might be useful if you don't have a GPU on your machine and want to use a training service or Colab for example. More info [here](https://huggingface.co/docs/huggingface_hub/quick-start)"
    ]
   },
   {
@@ -206,9 +208,9 @@
     "\n",
     "Finally, we are ready to test SetFit! \n",
     "\n",
-    "Thanks to Argilla's integration with `datasets` and the Hub, if you don't have a local GPU you can use this [Google Colab](https://colab.research.google.com/drive/166TrSY0aJfKYi8U9qWilaXN2b2-nGlVD?usp=sharing) to reproduce the training process with the labelled dataset. If you use a GPU runtime, it literally takes 5 minutes to train.\n",
+    "Thanks to Argilla's integration with `datasets` and the Hub, if you don't have a local GPU you can use this [Google Colab](https://colab.research.google.com/drive/166TrSY0aJfKYi8U9qWilaXN2b2-nGlVD?usp=sharing) to reproduce the training process with the labeled dataset. If you use a GPU runtime, it literally takes 5 minutes to train.\n",
     "\n",
-    "Below we load the dataset from Argilla, format it for training with transformers, load the full imbd test dataset, load a pre-trained sentence transformers model, train the SetFit model, and evaluate it!\n",
+    "Below we load the dataset from Argilla, format it for training with transformers, load the full IMDb test dataset, load a pre-trained sentence transformers model, train the SetFit model, and evaluate it!\n",
     "\n"
    ]
   },
@@ -219,10 +221,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the handlabelled dataset from Argilla\n",
+    "# Load the hand-labeled dataset from Argilla\n",
     "train_ds = rg.load(\"imdb_unlabelled\").prepare_for_training()\n",
     "\n",
-    "# Load the full imdb test dataset\n",
+    "# Load the full IMDb test dataset\n",
     "test_ds = load_dataset(\"imdb\", split=\"test\")\n",
     "\n",
     "\n",
@@ -273,16 +275,16 @@
     "\n",
     "And remember:\n",
     "\n",
-    "- We have manually labelled 55 examples, \n",
+    "- We have manually labeled 55 examples, \n",
     "- We haven't used a single example from the original training set, \n",
     "- and we've trained the model in 5 min!\n",
     "\n",
-    "Now, I don't think you have any more excuses to not invest some time labeling a few good quality examples!\n",
+    "Now, I don't think you have any more excuses to not invest some time labeling a few good-quality examples!\n",
     "\n",
     "If you are interested in SetFit, you can check our other SetFit + Argilla tutorials:\n",
     "\n",
-    "- [Zero-shot and few-shot classification with SetFit](labelling-textclassification_setfit_zeroshot.ipynb)\n",
-    "- [Train a sentiment classifier with SetFit](training-textclassification-setfit-sentiment.ipynb)\n",
+    "- [Zero-shot and few-shot classification with SetFit](/tutorials/notebooks/labelling-textclassification-setfit-zeroshot.html)\n",
+    "- [Train a sentiment classifier with SetFit](/tutorials/notebooks/training-textclassification-setfit-sentiment.html)\n",
     "\n",
     "Or check out the [SetFit repository on GitHub](https://github.com/huggingface/setfit)."
    ]
