--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_errors_cleanlab.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_errors_cleanlab.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# 🧹 Find and clean label errors with cleanlab\n",
     "\n",
-    "In this tutorial we will leverage *Argilla* and [cleanlab](https://github.com/cgnorthcutt/cleanlab) to find, uncover and correct potential label errors.\n",
-    "You can do this following 4 basic MLOps Steps:\n",
+    "In this tutorial, we will leverage *Argilla* and [cleanlab](https://github.com/cgnorthcutt/cleanlab) to find, uncover and correct potential label errors.\n",
+    "You can do this by following 4 basic MLOps Steps:\n",
     "\n",
     "- 💾 load a dataset with potential label errors, here we use the [ag_news](https://huggingface.co/datasets/ag_news) dataset;\n",
     "- 💻 train a model to make predictions for a test set, here we use a lightweight [sklearn](https://scikit-learn.org/stable//) model;\n",
@@ -30,7 +30,7 @@
     "It is open-sourced as the [cleanlab Python package](https://github.com/cgnorthcutt/cleanlab) that supports finding, quantifying, and learning with label errors in data sets.\n",
     "\n",
     "*Argilla* provides built-in support for *cleanlab* and makes it a breeze to find potential label errors in your dataset.\n",
-    "In this tutorial we will try to uncover and correct label errors in the well-known [ag_news](https://huggingface.co/datasets/ag_news) dataset that is often used to benchmark classification models in NLP."
+    "In this tutorial, we will try to uncover and correct label errors in the well-known [ag_news](https://huggingface.co/datasets/ag_news) dataset that is often used to benchmark classification models in NLP."
    ]
   },
   {
@@ -51,7 +51,7 @@
     "For details about configuring your deployment, check the [official Hugging Face Hub guide](https://huggingface.co/docs/hub/spaces-sdks-docker-argilla).\n",
     "\n",
     "\n",
-    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](../../getting_started/quickstart.ipynb). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
+    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](/getting_started/quickstart_installation.html). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
     "\n",
     "For more information on deployment options, please check the Deployment section of the documentation.\n",
     "\n",
@@ -62,7 +62,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -113,9 +113,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -185,16 +187,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# download data\n",
+    "# Download the data\n",
     "dataset = load_dataset(\"ag_news\")\n",
     "\n",
-    "# get train set and shuffle\n",
+    "# Get the train set and shuffle\n",
     "ds_train = dataset[\"train\"].shuffle(seed=43)\n",
     "\n",
-    "# get test set\n",
+    "# Get the test set\n",
     "ds_test = dataset[\"test\"]\n",
     "\n",
-    "# get classification labels\n",
+    "# Get the classification labels\n",
     "labels = ds_train.features[\"label\"].names"
    ]
   },
@@ -206,7 +208,7 @@
    "source": [
     "## 2. Train model\n",
     "\n",
-    "For this tutorial we will use a multinomial **Naive Bayes classifier**, a lightweight and easy to train [sklearn](https://scikit-learn.org/stable//) model. \n",
+    "For this tutorial, we will use a multinomial **Naive Bayes classifier**, a lightweight and easy-to-train [sklearn](https://scikit-learn.org/stable//) model. \n",
     "However, you can use any model of your choice as long as it includes the probabilities for all labels in its predictions.\n",
     "\n",
     "The features for our classifier will be simply the token counts of our input text.\n",
@@ -221,10 +223,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define our classifier as a pipeline of token counts + naive bayes model\n",
+    "# Define our classifier as a pipeline of token counts + naive bayes model\n",
     "classifier = Pipeline([(\"vect\", CountVectorizer()), (\"clf\", MultinomialNB())])\n",
     "\n",
-    "# fit the classifier\n",
+    "# Fit the classifier\n",
     "classifier.fit(X=ds_train[\"text\"], y=ds_train[\"label\"])\n"
    ]
   },
@@ -243,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compute test accuracy\n",
+    "# Compute the test accuracy\n",
     "classifier.score(\n",
     "    X=ds_test[\"text\"],\n",
     "    y=ds_test[\"label\"],\n",
@@ -255,7 +257,7 @@
    "id": "6f2bfcb1-63ef-4f73-a76a-bb4eaf6a2bf9",
    "metadata": {},
    "source": [
-    "We should obtain a decent accuracy of 0.90, especially considering the fact that we only used the token counts as input feature."
+    "We should obtain a decent accuracy of 0.90, especially because we only used the token counts as an input feature."
    ]
   },
   {
@@ -281,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get predicted probabilities for all labels\n",
+    "# Get predicted probabilities for all labels\n",
     "probabilities = classifier.predict_proba(ds_test[\"text\"])"
    ]
   },
@@ -300,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create records for the test set\n",
+    "# Create records for the test set\n",
     "records = [\n",
     "    rg.TextClassificationRecord(\n",
     "        text=data[\"text\"],\n",
@@ -319,7 +321,7 @@
    "source": [
     "We could log these records directly to Argilla and conveniently inspect them by eye, checking the annotation of each text input.\n",
     "But here we will use a quicker way by leveraging Argilla's built-in support for [cleanlab](https://github.com/cgnorthcutt/cleanlab).\n",
-    "You simply import the [find_label_errors](../../reference/python/python_labeling.html) function from *Argilla* and pass in the list of records. That's it."
+    "You simply import the [find_label_errors](/../reference/python/python_labeling.html) function from *Argilla* and pass in the list of records. That's it."
    ]
   },
   {
@@ -329,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get records with potential label errors\n",
+    "# Get records with potential label errors\n",
     "records_with_label_error = find_label_errors(records)"
    ]
   },
@@ -358,7 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# uncover label errors in the Argilla web app\n",
+    "# Uncover label errors in the Argilla web app\n",
     "rg.log(records_with_label_error, \"label_errors\")\n"
    ]
   },
@@ -367,7 +369,7 @@
    "id": "3676a4ab-24b0-46d5-884c-439c22bb733c",
    "metadata": {},
    "source": [
-    "By default the records in the `records_with_label_error` list are ordered by their likelihood of containing a label error.\n",
+    "By default, the records in the `records_with_label_error` list are ordered by their likelihood of containing a label error.\n",
     "They will also contain a metadata called *\"label_error_candidate\"* by default, which reflects the order in the list.\n",
     "You can use this field in the *Argilla* web app to sort the records."
    ]
@@ -378,7 +380,7 @@
    "metadata": {},
    "source": [
     "We can confirm that the most likely candidates are indeed clear label errors.\n",
-    "Towards the end of the candidate list, the examples get more ambiguous, and it is not immediately obvious if the gold annotations are in fact erroneous."
+    "Towards the end of the candidate list, the examples get more ambiguous, and it is not immediately obvious if the gold annotations are erroneous."
    ]
   },
   {
@@ -389,10 +391,10 @@
     "## Summary\n",
     "\n",
     "With *Argilla* you can quickly and conveniently find label errors in your data.\n",
-    "The built-in support for [cleanlab](https://github.com/cgnorthcutt/cleanlab), together with the optimized user experience of the Argilla web app, makes the process a breeze, and allows you to efficiently correct label errors on the fly.\n",
+    "The built-in support for [cleanlab](https://github.com/cgnorthcutt/cleanlab), together with the optimized user experience of the Argilla web app, makes the process a breeze and allows you to efficiently correct label errors on the fly.\n",
     "\n",
     "In just a few steps you can quickly check if your test data set is seriously affected by label errors and if your benchmarks are really meaningful in practice. \n",
-    "Maybe your less complex models turns out to beat your resource hungry super model, and the deployment process just got a little bit easier 😀.\n",
+    "Maybe your less complex models turn out to beat your resource-hungry supermodel, and the deployment process just got a little bit easier 😀.\n",
     "\n",
     "Although we only used a sklearn model in this tutorial, Argilla does not care about the model architecture or the framework you are working with. \n",
     "It just cares about the underlying data and allows you to put more humans in the loop of your AI Lifecycle."
@@ -407,7 +409,7 @@
     "\n",
     "In order to check your training data for label errors, you can fall back to the cross-validation technique to get out-of-sample predictions.\n",
     "With a classifier from sklearn, cross-validation is really easy and you can do it conveniently in one line of code.\n",
-    "Afterwards, the steps of creating *Argilla* records, finding label error candidates, and uncovering them are the same as shown in the tutorial above."
+    "Afterward, the steps of creating *Argilla* records, finding label error candidates, and uncovering them are the same as shown in the tutorial above."
    ]
   },
   {
@@ -419,7 +421,7 @@
    "source": [
     "from sklearn.model_selection import cross_val_predict\n",
     "\n",
-    "# get predicted probabilities for the whole dataset via cross validation\n",
+    "# Get predicted probabilities for the whole dataset via cross-validation\n",
     "cv_probs = cross_val_predict(\n",
     "    classifier,\n",
     "    X=ds_train[\"text\"] + ds_test[\"text\"],\n",
@@ -437,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create records for the training set\n",
+    "# Create records for the training set\n",
     "records = [\n",
     "    rg.TextClassificationRecord(\n",
     "        text=data[\"text\"],\n",
@@ -448,7 +450,7 @@
     "    for data, prediction in zip(ds_train, cv_probs)\n",
     "]\n",
     "\n",
-    "# uncover label errors for the train set in the Argilla web app\n",
+    "# Uncover label errors for the train set in the Argilla web app\n",
     "rg.log(find_label_errors(records), \"label_errors_in_train\")"
    ]
   },
@@ -467,8 +469,8 @@
    "source": [
     "## Appendix II: Log datasets to the Hugging Face Hub\n",
     "\n",
-    "Here we will show you an example of how you can push a Argilla dataset (records) to the [Hugging Face Hub](https://huggingface.co/datasets).\n",
-    "In this way you can effectively version any of your Argilla datasets."
+    "Here we will show you an example of how you can push an Argilla dataset (records) to the [Hugging Face Hub](https://huggingface.co/datasets).\n",
+    "In this way, you can effectively version any of your Argilla datasets."
    ]
   },
   {
