--- a/docs/_source/tutorials/notebooks/training-llm-mistral-sft.ipynb
+++ b/docs/_source/tutorials/notebooks/training-llm-mistral-sft.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ⓜ️ Finetuning LLMs: Supervised Finetuning on Mistral 7B\n",
+    "# Ⓜ️ Finetuning LLMs as chat assistants: Supervised Finetuning on Mistral 7B\n",
     "In this tutorial, you will learn how to finetune a Large Language Model (LLM), Mistral 7B in particular, on a chat-style instruction dataset. We start with [mistralai/Mistral-7B-v0.1](https://huggingface.co/mistralai/Mistral-7B-v0.1), an LLM that only does text completion, and we end up with our own [argilla/Mistral-7B-v0.1-chat-OIG](https://huggingface.co/argilla/Mistral-7B-v0.1-chat-OIG) model that faithfully follows instructions and acts as a helpful chat assistant.\n",
     "\n",
     "This tutorial consists of the following steps:\n",
