--- a/docs/_source/tutorials/notebooks/training-llm-mistral-sft.ipynb
+++ b/docs/_source/tutorials/notebooks/training-llm-mistral-sft.ipynb
@@ -128,7 +128,7 @@
     "\n",
     "### For this tutorial\n",
     "\n",
-    "For the purposes of this tutorial, we will use a \"prompt\" field with all chat history and the current prompt, as well as a \"response\" field with the response. Additionally, we introduce a \"background\". For the questions we will use one simple `LabelQuestion` that asks the annotator whether the response is `\"Good\"` or `\"Bad\"`."
+    "For the purposes of this tutorial, we will use a \"prompt\" field with all chat history and the current prompt, as well as a \"response\" field with the response. Additionally, we introduce a \"background\" text field, which is sometimes used to provide additional background information prior to the user prompt. For the questions we will use one simple `LabelQuestion` that asks the annotator whether the response is `\"Good\"` or `\"Bad\"`."
    ]
   },
   {
